--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.76.3",
+    "@sanity/vision": "^3.79.0",
+    "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-sanity": "^9.8.58-canary.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
-    "sanity": "^3.76.3",
-    "styled-components": "^6.1.15"
+    "sanity": "^3.79.0",
+    "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
