--- a/package.json
+++ b/package.json
@@ -6,35 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf node_modules package-lock.json .next && npm install"
+
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.9",
+    "@headlessui/react": "^2.2.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.79.0",
+    "@sanity/vision": "^3.80.1",
+    "@tailwindcss/postcss": "^4.0.15",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "iconsax-react": "^0.0.8",
-    "lucide-react": "^0.475.0",
-    "next": "15.1.7",
-    "next-sanity": "^9.8.58-canary.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.483.0",
+    "next": "^15.2.4",
+    "next-sanity": "^9.9.5",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
-    "sanity": "^3.79.0",
-    "styled-components": "^6.1.15",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "sanity": "^3.80.1",
+    "styled-components": "^6.1.16",
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "20.17.19",
-    "@types/react": "19.0.10",
+    "@types/node": "22.13.13",
+    "@types/react": "19.0.12",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.7.3"
+    "eslint-config-next": "15.2.4",
+    "typescript": "5.8.2"
   }
 }
